# tws-mcp

./: .gitignore  Dockerfile  PROJECT_STRUCTURE.md  PROMPTS_SUMMARY.md  README.md  UNIT_TEST_VERIFICATION.md  docker-compose.yml  main.py  pyproject.toml
diagnostics/: README.md  check_ib_client_loop.py  check_ib_loop_attrs.py  final_test.py  inspect_ib_structure.py  quick_test.py  runtime_check.py  subscribe_watchlist_news.py  test_fastmcp_methods.py  test_integration.py  test_mcp_http_app.py  test_minimal_tws.py  test_modular_structure.py  test_news_streaming.py  test_pnl_fix.py  test_resources_list.py  test_resources_simple.py  test_runtime_quick.py  test_server_endpoints.py  test_server_startup.py  test_sse_app.py  test_streaming.py  test_streaming_event_loop_fix.py  test_tick_news.py  test_tws_connection.py  verify_loop_fix.py  verify_setup.py
docs/: CLEANUP_SUMMARY.md  DESIGN.md  MARKET_DATA.md  MIGRATION_COMPLETE.md  NEWS.md  PORTFOLIO.md  PROMPTS_GUIDE.md  README.md  RESTRUCTURING_PLAN.md  SETUP.md  TOOLS.md
scripts/: test_curl.sh
src/: models.py  server.py  tws_client.py
src/prompts/: __init__.py  analysis.py  portfolio.py  trading.py
src/resources/: __init__.py  market_data.py  news.py  portfolio.py
src/streaming/: __init__.py  market_data.py  news.py  portfolio.py  websocket_manager.py
src/tools/: __init__.py  account.py  advanced.py  connection.py  contracts.py  market_data.py  news.py  options.py  orders.py  scanner.py
tests/: test_streaming_endpoints.py
tests/fixtures/: sample_positions.json
tests/integration/: README.md  (+1 more)
(+2 files in other folders)
