[project]
name = "ibkr-tws-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.17",
    "aeventkit==2.1.0",
    "ib-async==2.0.1",
    "mcp[cli]>=1.18.0",
    "python-dotenv>=1.1.1",
    "starlette>=0.48.0",
    "uvicorn[standard]>=0.37.0",
    "asyncio==4.0.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]
